# cmake-template

./: .clang-format  CMakeLists.txt
src/: main.cpp  types.h
src/math/: math.cpp  math.h
